Integrate CEF with Chromium's build process.

--- a/.gitignore
+++ b/.gitignore
@@ -260,6 +260,7 @@ v8.log
 /third_party/yasm/generate_files.xml
 /third_party/yasm/source/patched-yasm
 /third_party/yasm/yasm.xml
+/third_party/node
 /tools/deps2git/
 /tools/distcc
 /tools/grit
@@ -284,3 +285,4 @@ v8.log
 /webpagereplay_logs/
 /x86-generic_out/
 /xcodebuild
+/cef
